# modules/swagger/requestBody/GroupRequestBody.yaml
@@ -115,3 +115,18 @@ components: # 컴포넌트 선언
           format: int64
           description: 모임 시퀀스
           example: 1
+
+    # 모임 탈퇴 시, 모임장 위임이 필요한 경우 req.body
+    changeGroupLeader: # DELETE '/api/group/quit/:gSeq'
+      required:
+        - newLeaderUSeq
+      type: object
+      description: 모임장 위임이 필요한 경우 changeGroupLeader함수 실행을 위해 newLeaderUSeq
+      properties: # req.body로 넘어온 값 정의
+        newLeaderUSeq:
+          type: integer
+          format: int64
+          description: 새 모임장이 될 사람의 uSeq
+          example: 1
+
+
